Fix layout shift by always showing breadcrumbs
Shows "Home" at root level to maintain consistent spacing. Prevents
file list from jumping when navigating between folders.

--- a/client/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/client/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -30,7 +30,7 @@
     background: $primary-light;
   }
 
-  &:last-child {
+  &--current {
     color: $gray-500;
     cursor: default;
 
